[package]
    name = "rusty-kong"
    version = "0.1.0"
    authors = ["Jeff Panici <jeff@nybbles.io>"]

[[bin]]
    name = "rusty-kong"
    path = "src/game/main.rs"

[[bin]]
    name = "ripper"
    path = "src/ripper/main.rs"

[dependencies]
    log = "0.4"
    lazy_static = "1.0"
    simple_logger = "0.5"

[dependencies.sdl2]
    version = "0.31"
    default-features = false
    features = ["ttf","image","gfx","mixer"]